--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <body>
     <div class="invitation">
         <h1>Birthday Party Invitation</h1>
-        <h2>Name: Mr. Suchi</h2>
+        <h2>Name: Mr. Subham</h2>
         <p>You're invited to celebrate the birthday of <b>Gangadhar Swain and Rama Chandra Bhuyan</b></p>
         <p>Date: 10/11/2023</p>
         <p>Location: Bhanumati Bhaban</p>
